@@ -56,7 +56,13 @@ There is a specific [check_service for linux](check_service_linux) as well.`,
 			},
 		},
 		args: map[string]CheckArgument{
-			"service": {value: &l.services, description: "Name of the service to check (set to * to check all services). Default: *"},
+			"service": {
+				value:           &l.services,
+				isFilter:        true,
+				description:     "Name of the service to check (set to * to check all services). Default: *",
+				defaultWarning:  "state != 'running'",
+				defaultCritical: "state != 'running'",
+			},
 			"exclude": {value: &l.excludes, description: "List of services to exclude from the check (mainly used when service is set to *)"},
 		},
 		defaultFilter:   "none",
