@@ -715,14 +715,20 @@ func (snc *Agent) runCheck(ctx context.Context, name string, args []string) *Che
 
 	handler := check.Handler()
 	chk := handler.Build()
-	parsedArgs, err := chk.ParseArgs(args)
+	parsedArgs, warn, crit, err := chk.ParseArgs(args)
 	if err != nil {
 		return &CheckResult{
 			State:  CheckExitUnknown,
 			Output: fmt.Sprintf("${status} - %s", err.Error()),
 		}
 	}
-
+	// default warning/critical overridden from check arguments, ex. check_service
+	if warn != "" {
+		chk.defaultWarning = warn
+	}
+	if crit != "" {
+		chk.defaultCritical = crit
+	}
 	if chk.showHelp > 0 {
 		return &CheckResult{
 			Raw:    chk,
